butterfly: Projektnav, Tweak ParamEditorZero